--- a/system_huellitas/views/admin/scrud_cupones.html
+++ b/system_huellitas/views/admin/scrud_cupones.html
@@ -21,15 +21,18 @@
 </head>
 
 <body>
-  <!-- Insertar nuestro navbar a esta pantalla usando js -->
-  <div id="navbar"></div>
-
-  <header class="container_one p-2S">
-    <div class="container-fluid p-4 mt-5">
-      <div class="d-flex">
-        <img src="../../resources/img/png/giftcardIcon.png" class="custom-margin-right" alt="">
-        <h2 class="mt-2"><strong>Cupones</strong></h2>
-        <div class="row"></div>
+  <header>
+    <!-- Insertar nuestro navbar a esta pantalla usando js -->
+    <div id="navbar"></div>
+    <div class="container p-2 mt-5">
+      <div class="row mt-5">
+        <!-- Automaticamente cada col se va distribuir en la row -->
+        <div class="col-auto">
+          <img src="../../resources/img/png/giftcardIcon.png" width="50px">
+        </div>
+        <div class="col-auto">
+          <h2 class="fw-bold">Cupones</h2>
+        </div>
       </div>
     </div>
   </header>
@@ -163,7 +166,7 @@
         <div class="modal-header bg-orange-color">
           <!-- Esto define el titiulo del modal que aparece en la franja naranja -->
           <div class="container text-center">
-            <h1 class="modal-title fs-5 text-white" id="exampleModalLabel">Agregar</h1>
+            <h1 class="modal-title fs-5 text-white" id="exampleModalLabel">Agregar cupón</h1>
           </div>
           <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
@@ -171,27 +174,30 @@
         <div class="modal-body">
           <div class="row">
             <div class="col-sm-12 col-md-6">
-              <p class="fs-8 btn-orange-color">Código</p>
-              <input type="text" class="form-control" placeholder="#####" aria-label="codigo" id="Codigo_AgregarCuponFormulario" name="Codigo_AgregarCuponFormularioN">
+              <p class="fs-8 btn-orange-color fw-bold">Código</p>
+              <input type="text" class="form-control" placeholder="#####" aria-label="codigo"
+                id="Codigo_AgregarCuponFormulario" name="Codigo_AgregarCuponFormularioN">
             </div>
             <!-- EL div que esta debajo donde se dice col-sm-12 y col-sm-6 es para que los input usen
             todo el espacio disponible y sino se ordenen 2 inputs a la par-->
             <div class="col-sm-12 col-md-6">
-              <p class="fs-8 btn-orange-color">Porcentaje</p>
-              <input type="text" class="form-control" placeholder="100%" aria-label="porcentaje" id="Porcentaje_AgregarCuponFormulario" name="Porcentaje_AgregarCuponFormularioN">
+              <p class="fs-8 btn-orange-color fw-bold">Porcentaje</p>
+              <input type="text" class="form-control" placeholder="100%" aria-label="porcentaje"
+                id="Porcentaje_AgregarCuponFormulario" name="Porcentaje_AgregarCuponFormularioN">
             </div>
           </div>
           <br>
           <!-- Este div indica que usaremos un swtich que tiene 2 modos, true o false -->
           <div class="form-check form-switch" id="check_AgregarCuponFormulario" name="check_AgregarCuponFormularioN">
-            <label class="form-check-label" for="flexSwitchCheckChecked">Cupón habilitado</label>
+            <label class="form-check-label fw-bold" for="flexSwitchCheckChecked">Cupón habilitado</label>
             <input class="form-check-input bg-orange-color" type="checkbox" role="switch" id="flexSwitchCheckChecked"
               checked>
           </div>
         </div>
         <!-- Este Boton es para enviar los datos del formulario -->
         <div class="container text-center">
-          <button type="button" class="btn btn-orange-color text-white" id="BotonAgregar_AgregarCuponFormulario">Agregar</button>
+          <button type="button" class="btn btn-orange-color text-white"
+            id="BotonAgregar_AgregarCuponFormulario">Agregar</button>
         </div>
         <br>
       </div>
@@ -210,7 +216,7 @@
         <!-- El div que esta debajo del comentario indica el color de fondo del titulo del modal y el titulo -->
         <div class="modal-header bg-orange-color">
           <div class="container text-center">
-            <h1 class="modal-title fs-5 text-white" id="exampleModalLabel">Actualizar</h1>
+            <h1 class="modal-title fs-5 text-white" id="exampleModalLabel">Actualizar cupón</h1>
           </div>
           <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
@@ -218,18 +224,19 @@
         <div class="modal-body">
           <div class="row">
             <div class="col-sm-12 col-md-6">
-              <p class="fs-8 btn-orange-color"> Código</p>
-              <input type="text" class="form-control" placeholder="#####" aria-label="codigo" id="Codigo_ActualizarCupon" name="Codigo_ActualizarCuponN"> 
+              <p class="fs-8 btn-orange-color fw-bold"> Código</p>
+              <input type="text" class="form-control" placeholder="#####" aria-label="codigo"
+                id="Codigo_ActualizarCupon" name="Codigo_ActualizarCuponN">
             </div>
             <div class="col-sm-12 col-md-6">
-              <p class="fs-8 btn-orange-color"> Porcentaje</p>
+              <p class="fs-8 btn-orange-color fw-bold"> Porcentaje</p>
               <input type="text" class="form-control" placeholder="100%" aria-label="porcentaje">
             </div>
           </div>
           <br>
           <!-- Este div indica que usaremos un swtich que tiene 2 modos, true o false -->
           <div class="form-check form-switch" id="switch_ActualizarCupon" name="switch_ActualizarCuponN">
-            <label class="form-check-label" for="flexSwitchCheckChecked">Cupón habilitado</label>
+            <label class="form-check-label fw-bold" for="flexSwitchCheckChecked">Cupón habilitado</label>
             <input class="form-check-input bg-orange-color" type="checkbox" role="switch" id="flexSwitchCheckChecked"
               checked>
           </div>
