--- a/system_huellitas/views/admin/scrud_pedidos.html
+++ b/system_huellitas/views/admin/scrud_pedidos.html
@@ -20,15 +20,18 @@
 </head>
 
 <body>
-    <!-- Insertar nuestro navbar a esta pantalla usando js -->
-    <div id="navbar"></div>
-
-    <header class="container_one p-2S">
-        <div class="container-fluid p-4 mt-5">
-            <div class="d-flex">
-                <img src="../../resources/img/png/ShoppingCart.png" class="custom-margin-right" alt="">
-                <h2 class="mt-2"><strong>Pedidos</strong></h2>
-                <div class="row"></div>
+    <header>
+        <!-- Insertar nuestro navbar a esta pantalla usando js -->
+        <div id="navbar"></div>
+        <div class="container p-2 mt-5">
+            <div class="row mt-5">
+                <!-- Automaticamente cada col se va distribuir en la row -->
+                <div class="col-auto">
+                    <img src="../../resources/img/png/ShoppingCart.png" width="50px">
+                </div>
+                <div class="col-auto">
+                    <h2 class="fw-bold">Pedidos</h2>
+                </div>
             </div>
         </div>
     </header>
@@ -41,7 +44,7 @@
                 <div class="col-md-6 col-lg-6">
                     <form class="d-flex" role="search" id="search_pedidos">
                         <input class="form-control rounded-4 shadow bg-white" type="search" aria-label="Search"
-                            id="search" placeholder="Buscar...">
+                            id="search" placeholder="Buscar cliente o producto...">
                     </form>
                 </div>
             </div>
@@ -225,9 +228,14 @@
                                     <img src="../../resources/img/png/product1.png" alt="Imagen" height="90">
                                     <!-- Información del producto -->
                                     <div class="ms-2 me-auto">
-                                        <span class="badge badge-custom text-dark shadow mb-4" id="Cantidad_InformacionPedidos" name="Cantidad__InformacionPedidosN">1</span>
-                                        <div class="marca" id="Marca_InformacionPedidos" name="Marca_InformacionPedidosN"> Pedigree</div>
-                                        <div class="producto" id="Producto_InformacionPedidos" name="Producto__InformacionPedidosN"> Bolsa 21 kilos, pedigree perro adulto </div>
+                                        <span class="badge badge-custom text-dark shadow mb-4"
+                                            id="Cantidad_InformacionPedidos"
+                                            name="Cantidad__InformacionPedidosN">1</span>
+                                        <div class="marca" id="Marca_InformacionPedidos"
+                                            name="Marca_InformacionPedidosN"> Pedigree</div>
+                                        <div class="producto" id="Producto_InformacionPedidos"
+                                            name="Producto__InformacionPedidosN"> Bolsa 21 kilos, pedigree perro adulto
+                                        </div>
                                     </div>
                                     <!-- Opciones para el producto -->
                                     <div class="d-flex flex-column mb-3">
@@ -287,7 +295,8 @@
                                 for="flexSwitchCheckChecked">Nombre</label>
                             <br>
                             <!-- Nombre del cliente -->
-                            <label class="form-check-label" for="flexSwitchCheckChecked" id="Nombre__InformacionPedidos" name="Nombr_InformacionPedidosN">Daniel Carranza</label>
+                            <label class="form-check-label" for="flexSwitchCheckChecked" id="Nombre__InformacionPedidos"
+                                name="Nombr_InformacionPedidosN">Daniel Carranza</label>
                         </div>
                         <!-- Más información adicional -->
                         <br>
@@ -296,7 +305,9 @@
                             <label class="form-check-label custom-bold-label"
                                 for="flexSwitchCheckChecked">Dirección</label>
                             <br>
-                            <label class="form-check-label" for="flexSwitchCheckChecked" id="Direccion_InformacionPedidos" name="Direccion_InformacionPedidosN">Calle las rosas, residencial 4,
+                            <label class="form-check-label" for="flexSwitchCheckChecked"
+                                id="Direccion_InformacionPedidos" name="Direccion_InformacionPedidosN">Calle las rosas,
+                                residencial 4,
                                 poligono 3A, casa #10</label>
                         </div>
                         <!-- Más información de la dirección -->
@@ -307,7 +318,8 @@
                                 realizo el pago</label>
                             <br>
                             <!-- Fecha de pago del pedido -->
-                            <label class="form-check-label" for="flexSwitchCheckChecked" id="Fecha_InformacionPedidos" name="Fecha_InformacionPedidosN">2024-03-10</label>
+                            <label class="form-check-label" for="flexSwitchCheckChecked" id="Fecha_InformacionPedidos"
+                                name="Fecha_InformacionPedidosN">2024-03-10</label>
                         </div>
                         <!-- Total a pagar -->
                         <br>
@@ -316,7 +328,8 @@
                                 pagar</label>
                             <br>
                             <!-- Monto total a pagar por el pedido -->
-                            <label class="form-check-label" for="flexSwitchCheckChecked" id="Total_InformacionPedidos" name="Total_InformacionPedidosN">$29.40</label>
+                            <label class="form-check-label" for="flexSwitchCheckChecked" id="Total_InformacionPedidos"
+                                name="Total_InformacionPedidosN">$29.40</label>
                         </div>
                     </div>
                     <br>
