--- a/system_huellitas/views/admin/scrud_cupones.html
+++ b/system_huellitas/views/admin/scrud_cupones.html
@@ -93,9 +93,9 @@
             </td>
             <td>
               <button type="button" class="btn btn-danger img-fluid"><img
-                  src="../../resources/img/png/eliminar_img_boton.png" class="tamanio_edicion_botones"></button>
+                  src="../../resources/img/svg/delete_icon.svg" class="tamanio_edicion_botones"></button>
               <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal"
-                data-bs-target="#actCupon"><img src="../../resources/img/png/editar_boton.png"
+                data-bs-target="#actCupon"><img src="../../resources/img/svg/info_icon.svg"
                   class="tamanio_edicion_botones"></button>
               <!-- donde dice "data-bs-target" se indica el id del modal que se abrirá al darle click, el modal comunmente 
                     se pone arriba del </html pero fuera del body-->
@@ -115,10 +115,9 @@
             </td>
             <td>
               <button type="button" class="btn btn-danger img-fluid"><img
-                  src="../../resources/img/png/eliminar_img_boton.png" class="tamanio_edicion_botones"></button>
+                  src="../../resources/img/svg/delete_icon.svg" class="tamanio_edicion_botones"></button>
               <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal"
-                data-bs-target="#actCupon"><img src="../../resources/img/png/editar_boton.png"
-                  class="tamanio_edicion_botones"></button>
+                data-bs-target="#actCupon"><img src="../../resources/img/svg/info_icon.svg"                  class="tamanio_edicion_botones"></button>
               <!-- Aqui se define si el check se le podrá cambiar la propiedad, aqui es una vista previa así que por motivos de diseño
                   No lo habilitamos-->
             </td>
@@ -137,9 +136,9 @@
             </td>
             <td>
               <button type="button" class="btn btn-danger img-fluid"><img
-                  src="../../resources/img/png/eliminar_img_boton.png" class="tamanio_edicion_botones"></button>
+                  src="../../resources/img/svg/delete_icon.svg" class="tamanio_edicion_botones"></button>
               <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal"
-                data-bs-target="#actCupon"><img src="../../resources/img/png/editar_boton.png"
+                data-bs-target="#actCupon"><img src="../../resources/img/svg/info_icon.svg"
                   class="tamanio_edicion_botones"></button>
               <!-- Aqui se define si el check se le podrá cambiar la propiedad, aqui es una vista previa así que por motivos de diseño
                   No lo habilitamos-->
