Actualizar scrud_permisos.html

--- a/system_huellitas/views/admin/scrud_permisos.html
+++ b/system_huellitas/views/admin/scrud_permisos.html
@@ -79,9 +79,9 @@
             <td>Contador</td>
             <td>
               <button type="button" class="btn btn-danger img-fluid" id="btnEliminar_Permisos"><img
-                  src="../../resources/img/png/eliminar_img_boton.png" class="tamanio_edicion_botones"></button>
+                  src="../../resources/img/svg/delete_icon.svg" class="tamanio_edicion_botones"></button>
               <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal"
-                data-bs-target="#actPermiso" id="btnEditar_Permisos"><img src="../../resources/img/png/editar_boton.png"
+                data-bs-target="#actPermiso" id="btnEditar_Permisos"><img src="../../resources/img/svg/info_icon.svg"
                   class="tamanio_edicion_botones"></button>
             </td>
           </tr>
@@ -89,9 +89,9 @@
             <td>Administrador</td>
             <td>
               <button type="button" class="btn btn-danger img-fluid"><img
-                  src="../../resources/img/png/eliminar_img_boton.png" class="tamanio_edicion_botones"></button>
+                  src="../../resources/img/svg/delete_icon.svg" class="tamanio_edicion_botones"></button>
               <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal"
-                data-bs-target="#actPermiso"><img src="../../resources/img/png/editar_boton.png"
+                data-bs-target="#actPermiso"><img src="../../resources/img/svg/info_icon.svg"
                   class="tamanio_edicion_botones"></button>
               <!-- donde dice "data-bs-target" se indica el id del modal que se abrirá al darle click, el modal comunmente 
                     se pone arriba del </html pero fuera del body-->
@@ -101,9 +101,9 @@
             <td>Vendedor</td>
             <td>
               <button type="button" class="btn btn-danger img-fluid"><img
-                  src="../../resources/img/png/eliminar_img_boton.png" class="tamanio_edicion_botones"></button>
+                  src="../../resources/img/svg/delete_icon.svg" class="tamanio_edicion_botones"></button>
               <button type="button" class="btn btn-warning img-fluid" data-bs-toggle="modal"
-                data-bs-target="#actPermiso"><img src="../../resources/img/png/editar_boton.png"
+                data-bs-target="#actPermiso"><img src="../../resources/img/svg/info_icon.svg"
                   class="tamanio_edicion_botones"></button>
             </td>
           </tr>
